--- a/_config.yml
+++ b/_config.yml
@@ -2,22 +2,17 @@
 #
 
 # Site settings
-title: Spectral
+title: Ishan's Tech Journey
 description: |
-  Another fine responsive  
-  site template freebie  
-  crafted by [HTML5 UP](http://html5up.net)
-owner: Your Name # or company name
-first_published: 2016 # if migrating another site, the year of your first publish
-email: your-email@domain.com
+  The logcat generated as I learn, implement and develop
+owner: Ishan Srivastava # or company name
+first_published: 2019 # if migrating another site, the year of your first publish
+email: mail.ishansrivastava@gmail.com
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://isriv.github.io" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
+  github: https://github.com/isriv
   linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
   #email: /contact/
   #flickr:
   #instagram:
